# langstream

./: .dockerignore  .example.env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
clients/react-vite/: eslint.config.js  package-lock.json  package.json
clients/react-vite/src/: App.tsx  index.css  main.tsx
clients/react-vite/src/components/ui/: button.tsx  tabs.tsx
clients/react-vite/src/hooks/: useChat.ts  useThread.ts
clients/react-vite/src/lib/: api.ts  utils.ts
clients/react-vite/src/providers/: ChatProvider.tsx  chat-provider.tsx
src/: main.py
src/config/mocks/: __init__.py  response.py
src/langstream/: __main__.py
src/langstream/config/: examples.py
src/langstream/config/mocks/: __init__.py  response.py
src/langstream/graphs/: __init__.py
src/langstream/models/: __init__.py
src/langstream/router/: llm.py  thread.py
src/langstream/services/: checkpoint.py  memory.py
src/langstream/tools/: __init__.py  code.py  memory.py
src/langstream/utils/: identify.py  logger.py  stream.py
src/utils/: logger.py  stream.py
